Funcional com telas e buscas

--- a/app/views/veiculos/show.html.erb
+++ b/app/views/veiculos/show.html.erb
@@ -35,5 +35,5 @@
   <%= @veiculo.alocado %>
 </p>
 
-<%= link_to 'Edit', edit_veiculo_path(@veiculo) %> |
-<%= link_to 'Back', veiculos_path %>
+<%= link_to 'Editar', edit_veiculo_path(@veiculo) %> |
+<%= link_to 'Voltar', veiculos_path %>
