--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -1,39 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Veiculos</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Placa</th>
-      <th>Modelo</th>
-      <th>Ano</th>
-      <th>Cor</th>
-      <th>Quilometragem</th>
-      <th>Manutencaoemdia</th>
-      <th>Alocado</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @veiculos.each do |veiculo| %>
-      <tr>
-        <td><%= veiculo.placa %></td>
-        <td><%= veiculo.modelo %></td>
-        <td><%= veiculo.ano %></td>
-        <td><%= veiculo.cor %></td>
-        <td><%= veiculo.quilometragem %></td>
-        <td><%= veiculo.manutencaoEmDia %></td>
-        <td><%= veiculo.alocado %></td>
-        <td><%= link_to 'Show', veiculo %></td>
-        <td><%= link_to 'Edit', edit_veiculo_path(veiculo) %></td>
-        <td><%= link_to 'Destroy', veiculo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<h1>Veiculos
+  <ul>
+    <%= form_tag veiculos_path, :method => 'get' do %>
+      <%= text_field_tag :search, params[:search] %>
+      <%= submit_tag "Buscando", :value => "Buscar" %>
     <% end %>
-  </tbody>
-</table>
+  </ul>
 
+  <% @veiculos.each do |veiculo| %>
+    <ul>
+      <li><%= link_to veiculo.placa , veiculo_path(veiculo)%></li>
+      <td><%= link_to "Remover", veiculo, data: {:confirm => "Deseja remover o veículo?"}, :method => :delete %></td>
+    </ul>
+  <% end %>
 <br>
 
-<%= link_to 'New Veiculo', new_veiculo_path %>
+<p>
+  <%= link_to 'Novo Veiculo', new_veiculo_path %><br />
+  <%= link_to 'Voltar', welcome_index_path %><br />
+</p>
