--- a/app/views/motorista/index.html.erb
+++ b/app/views/motorista/index.html.erb
@@ -1,35 +1,21 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Motorista</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Cpf</th>
-      <th>Nome</th>
-      <th>Numerodehoras</th>
-      <th>Bancodehoras</th>
-      <th>Telefone</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @motorista.each do |motorista| %>
-      <tr>
-        <td><%= motorista.cpf %></td>
-        <td><%= motorista.nome %></td>
-        <td><%= motorista.numeroDeHoras %></td>
-        <td><%= motorista.bancoDeHoras %></td>
-        <td><%= motorista.telefone %></td>
-        <td><%= link_to 'Show', motorista %></td>
-        <td><%= link_to 'Edit', edit_motorista_path(motorista) %></td>
-        <td><%= link_to 'Destroy', motorista, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+  <ul>
+    <%= form_tag usuarios_path, :method => 'get' do %>
+      <%= text_field_tag :search, params[:search] %>
+      <%= submit_tag "Buscando", :value => "Buscar" %>
     <% end %>
-  </tbody>
-</table>
+  </ul>
 
+  <% @motorista.each do |motorista| %>
+    <ul>
+      <li><%= link_to motorista.nome, motorista_path(motorista) %></li>
+    </ul>
+  <% end %>
 <br>
 
-<%= link_to 'New Motorista', new_motorista_path %>
+<p>
+  <%= link_to 'Novo Motorista', new_motoristum_path %><br />
+  <%= link_to 'Voltar', welcome_index_path %><br />
+</p>
