--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -1,37 +1,21 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Usuarios</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Cpf</th>
-      <th>Nome</th>
-      <th>Senha</th>
-      <th>Email</th>
-      <th>Telefone</th>
-      <th>Capacidadedegerencia</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @usuarios.each do |usuario| %>
-      <tr>
-        <td><%= usuario.cpf %></td>
-        <td><%= usuario.nome %></td>
-        <td><%= usuario.senha %></td>
-        <td><%= usuario.email %></td>
-        <td><%= usuario.telefone %></td>
-        <td><%= usuario.capacidadeDeGerencia %></td>
-        <td><%= link_to 'Show', usuario %></td>
-        <td><%= link_to 'Edit', edit_usuario_path(usuario) %></td>
-        <td><%= link_to 'Destroy', usuario, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<h1>Usuarios
+  <ul>
+    <%= form_tag usuarios_path, :method => 'get' do %>
+      <%= text_field_tag :search, params[:search] %>
+      <%= submit_tag "Buscando", :value => "Buscar" %>
     <% end %>
-  </tbody>
-</table>
+  </ul>
 
+  <% @usuarios.each do |usuario| %>
+    <ul>
+      <li><%= link_to usuario.nome, usuario_path(usuario) %></li>
+    </ul>
+  <% end %>
 <br>
 
-<%= link_to 'New Usuario', new_usuario_path %>
+<p>
+  <%= link_to 'Novo Usuario', new_usuario_path %><br />
+  <%= link_to 'Voltar', welcome_index_path %><br />
+</p>
