--- a/app/views/usuarios/show.html.erb
+++ b/app/views/usuarios/show.html.erb
@@ -30,5 +30,5 @@
   <%= @usuario.capacidadeDeGerencia %>
 </p>
 
-<%= link_to 'Editar', edit_usuario_path(@usuario) %> |
-<%= link_to 'Voltar', usuarios_path %>
+<%= link_to 'Editar', edit_usuario_path(@usuario), class: "btn btn-default" %> |
+<%= link_to 'Voltar', usuarios_path, class: "btn btn-default" %>
