--- a/app/views/usuarios/edit.html.erb
+++ b/app/views/usuarios/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', usuario: @usuario %>
 
-<%= link_to 'Show', @usuario %> |
-<%= link_to 'Back', usuarios_path %>
+<%= link_to 'Show', @usuario, class: "btn btn-default" %>
+<%= link_to 'Back', usuarios_path, class: "btn btn-default" %>
