--- a/app/views/usuarios/new.html.erb
+++ b/app/views/usuarios/new.html.erb
@@ -1,4 +1,4 @@
 <h1>Novo Usuario</h1>
 
 <%= render 'form', usuario: @usuario %>
-<%= link_to 'Back', usuarios_path, class: "btn btn-default" %>
+<%= link_to 'Voltar', usuarios_path, class: "btn btn-default" %>
