--- a/app/views/veiculos/edit.html.erb
+++ b/app/views/veiculos/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', veiculo: @veiculo %>
 
-<%= link_to 'Show', @veiculo %> |
-<%= link_to 'Back', veiculos_path %>
+<%= link_to 'Exibir', @veiculo, class:"btn btn-default" %> |
+<%= link_to 'Voltar', veiculos_path, class:"btn btn-default" %>
