--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -10,12 +10,14 @@
 
   <% @veiculos.each do |veiculo| %>
     <ul>
-      <li><%= link_to veiculo.placa , veiculo_path(veiculo)%></li>
-      <td><%= link_to "Remover", veiculo, data: {:confirm => "Deseja remover o veículo?"}, :method => :delete %></td>
+      <li>
+        <%= link_to veiculo.placa , veiculo_path(veiculo), class: "btn btn-default"%>
+        <%= link_to "Remover", veiculo, data: {:confirm => "Deseja remover o veículo?"}, :method => :delete, class: "btn btn-default" %>
+      </li>
     </ul>
   <% end %>
 <br>
 
 <p>
-  <%= link_to 'Novo Veiculo', new_veiculo_path %><br />
+  <%= link_to 'Novo Veiculo', new_veiculo_path, class: "btn btn-default" %><br />
 </p>
