--- a/app/views/veiculos/new.html.erb
+++ b/app/views/veiculos/new.html.erb
@@ -1,5 +1,4 @@
 <h1>Novo Veiculo</h1>
 
 <%= render 'form', veiculo: @veiculo %>
-
-<%= link_to 'Back', veiculos_path %>
+<%= link_to 'Voltar', veiculos_path, class: "btn btn-default" %>
