Ajuste nas telas de Motorista

--- a/app/views/motorista/index.html.erb
+++ b/app/views/motorista/index.html.erb
@@ -10,12 +10,14 @@
 
   <% @motorista.each do |motorista| %>
     <ul>
-      <li><%= link_to motorista.nome, motorista_path(motorista) %></li>
-      <td><%= link_to "Remover", motorista, data: {:confirm => "Deseja remover o veículo?"}, :method => :delete %></td>
+      <li>
+        <%= link_to motorista.nome, motorista_path(motorista), class: "btn btn-default" %>
+        <%= link_to "Remover", motorista, data: {:confirm => "Deseja remover o veículo?"}, :method => :delete, class: "btn btn-default" %></d>
+      </li>
     </ul>
   <% end %>
 <br>
 
 <p>
-  <%= link_to 'Novo Motorista', new_motorista_path %><br />
+  <%= link_to 'Novo Motorista', new_motorista_path, class: "btn btn-default" %><br />
 </p>
