--- a/app/views/motorista/edit.html.erb
+++ b/app/views/motorista/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', motorista: @motorista %>
 
-<%= link_to 'Show', @motorista %> |
-<%= link_to 'Back', motorista_index_path %>
+<%= link_to 'Exibir', @motorista , class: "btn btn-default" %>
+<%= link_to 'Back', motorista_index_path, class: "btn btn-default" %>
