--- a/app/views/motorista/new.html.erb
+++ b/app/views/motorista/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', motorista: @motorista %>
 
-<%= link_to 'Back', motoristum_index_path %>
+<%= link_to 'Voltar', motorista_index_path, class: "btn btn-default" %>
