--- a/app/views/motorista/show.html.erb
+++ b/app/views/motorista/show.html.erb
@@ -25,5 +25,5 @@
   <%= @motorista.telefone %>
 </p>
 
-<%= link_to 'Edit', edit_motorista_path(@motorista) %> |
-<%= link_to 'Back', motorista_index_path %>
+<%= link_to 'Editar', edit_motorista_path(@motorista), class: "btn btn-default" %> |
+<%= link_to 'Voltar', motorista_index_path, class: "btn btn-default" %>
