Ajuste nas mensagens da tela

--- a/app/views/motorista/edit.html.erb
+++ b/app/views/motorista/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form', motorista: @motorista %>
 
-<%= link_to 'Exibir', @motorista , class: "btn btn-default" %>
-<%= link_to 'Back', motorista_index_path, class: "btn btn-default" %>
+<%= link_to 'Voltar', motorista_index_path, class: "btn btn-default" %>
