--- a/app/views/motorista/show.html.erb
+++ b/app/views/motorista/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Cpf:</strong>
+  <strong>CPF:</strong>
   <%= @motorista.cpf %>
 </p>
 
@@ -11,12 +11,12 @@
 </p>
 
 <p>
-  <strong>Numerodehoras:</strong>
+  <strong>Numero de Horas:</strong>
   <%= @motorista.numeroDeHoras %>
 </p>
 
 <p>
-  <strong>Bancodehoras:</strong>
+  <strong>Banco de Horas:</strong>
   <%= @motorista.bancoDeHoras %>
 </p>
 
