--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 <div class = "title-container">
-  <h1>Usuarios</h1>
+  <h1>Usuários</h1>
 </div>
   <ul>
     <%= form_tag usuarios_path, :method => 'get' do %>
