--- a/app/views/veiculos/show.html.erb
+++ b/app/views/veiculos/show.html.erb
@@ -26,7 +26,7 @@
 </p>
 
 <p>
-  <strong>Manutencaoemdia:</strong>
+  <strong>Manutenção em Dia:</strong>
   <%= @veiculo.manutencaoEmDia %>
 </p>
 
