--- a/app/views/usuarios/show.html.erb
+++ b/app/views/usuarios/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Cpf:</strong>
+  <strong>CPF:</strong>
   <%= @usuario.cpf %>
 </p>
 
@@ -26,7 +26,7 @@
 </p>
 
 <p>
-  <strong>Capacidadedegerencia:</strong>
+  <strong>Capacidade de Gerência:</strong>
   <%= @usuario.capacidadeDeGerencia %>
 </p>
 
