--- a/app/views/viagems/show.html.erb
+++ b/app/views/viagems/show.html.erb
@@ -2,17 +2,17 @@
 
 <p>
   <strong>Usuario:</strong>
-  <%= @viagem.usuario %>
+  <%= @viagem.usuario.nome %>
 </p>
 
 <p>
   <strong>Veiculo:</strong>
-  <%= @viagem.veiculo %>
+  <%= @viagem.veiculo.placa %>
 </p>
 
 <p>
   <strong>Motorista:</strong>
-  <%= @viagem.motorista %>
+  <%= @viagem.motorista.nome %>
 </p>
 
 <p>
