Ajuste de telas Viagem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
             <li><%= link_to 'Veiculos', veiculos_path %><br /></li>
             <li><%= link_to 'Usuarios', usuarios_path %><br /></li>
             <li><%= link_to 'Motoristas', motorista_index_path %></li>
+            <li><%= link_to 'Viagens', viagems_path %></li>
           </ul>
         </div>
       </nav>
