--- a/app/views/viagems/edit.html.erb
+++ b/app/views/viagems/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Viagem</h1>
+<h1>Editando Viagem</h1>
 
 <%= render 'form', viagem: @viagem %>
 
-<%= link_to 'Show', @viagem %> |
-<%= link_to 'Back', viagems_path %>
+<%= link_to 'Voltar', viagems_path, class: "btn btn-default" %>
