--- a/app/views/viagems/new.html.erb
+++ b/app/views/viagems/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Viagem</h1>
+<h1>Agendamento de Viagem</h1>
 
 <%= render 'form', viagem: @viagem %>
 
-<%= link_to 'Back', viagems_path %>
+<%= link_to 'Voltar', viagems_path, class: "btn btn-default" %>
