--- a/app/views/manutencaos/show.html.erb
+++ b/app/views/manutencaos/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Usuario:</strong>
-  <%= @manutencao.usuario %>
+  <%= @manutencao.usuario.nome %>
 </p>
 
 <p>
   <strong>Veiculo:</strong>
-  <%= @manutencao.veiculo %>
+  <%= @manutencao.veiculo.placa %>
 </p>
 
 <p>
