--- a/app/views/motorista/index.html.erb
+++ b/app/views/motorista/index.html.erb
@@ -1,8 +1,9 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Motorista</h1>
+<div class= "title-container">
+  <h1>Motoristas</h1>
+</div>
   <ul>
-    <%= form_tag usuarios_path, :method => 'get' do %>
+    <%= form_tag motorista_index_path, :method => 'get' do %>
       <%= text_field_tag :search, params[:search] %>
       <%= submit_tag "Buscando", :value => "Buscar" %>
     <% end %>
@@ -12,12 +13,10 @@
     <ul>
       <li>
         <%= link_to motorista.nome, motorista_path(motorista), class: "btn btn-default" %>
-        <%= link_to "Remover", motorista, data: {:confirm => "Deseja remover o veículo?"}, :method => :delete, class: "btn btn-default" %></d>
+        <%= link_to "Remover", motorista, data: {:confirm => "Deseja remover o usuário?"}, :method => :delete, class: "btn btn-default" %>
       </li>
     </ul>
   <% end %>
 <br>
 
-<p>
-  <%= link_to 'Novo Motorista', new_motorista_path, class: "btn btn-default" %><br />
-</p>
+<%= link_to 'Novo Motorista', new_motorista_path, class:"btn btn-default" %>
