--- a/app/views/motorista/new.html.erb
+++ b/app/views/motorista/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Novo Motorista</h1>
+<h1>New Motorista</h1>
 
 <%= render 'form', motorista: @motorista %>
 
-<%= link_to 'Voltar', motorista_index_path, class: "btn btn-default" %>
+<%= link_to 'Voltar', motorista_index_path, class:"btn btn-default" %>
