Ajustes nas telas de Manutenção

--- a/app/views/manutencaos/edit.html.erb
+++ b/app/views/manutencaos/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Manutencao</h1>
+<h1>Editando Manutenção</h1>
 
 <%= render 'form', manutencao: @manutencao %>
 
-<%= link_to 'Show', @manutencao %> |
-<%= link_to 'Back', manutencaos_path %>
+<%= link_to 'Voltar', manutencaos_path, class:"btn btn-default" %>
