--- a/app/views/manutencaos/new.html.erb
+++ b/app/views/manutencaos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Manutencao</h1>
+<h1>Nova Manutenção</h1>
 
 <%= render 'form', manutencao: @manutencao %>
 
-<%= link_to 'Back', manutencaos_path %>
+<%= link_to 'Voltar', manutencaos_path, class:"btn btn-default" %>
