--- a/app/views/manutencaos/index.html.erb
+++ b/app/views/manutencaos/index.html.erb
@@ -1,37 +1,22 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Manutencaos</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Usuario</th>
-      <th>Veiculo</th>
-      <th>Descricao</th>
-      <th>Custo</th>
-      <th>Realizadoem</th>
-      <th>Realizadoquando</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @manutencaos.each do |manutencao| %>
-      <tr>
-        <td><%= manutencao.usuario.nome %></td>
-        <td><%= manutencao.veiculo.nome %></td>
-        <td><%= manutencao.descricao %></td>
-        <td><%= manutencao.custo %></td>
-        <td><%= manutencao.realizadoEm %></td>
-        <td><%= manutencao.realizadoQuando %></td>
-        <td><%= link_to 'Show', manutencao %></td>
-        <td><%= link_to 'Edit', edit_manutencao_path(manutencao) %></td>
-        <td><%= link_to 'Destroy', manutencao, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class = "title-container">
+  <h1>Manutenções</h1>
+</div>
+  <ul>
+    <%= form_tag manutencaos_path, :method => 'get' do %>
+      <%= text_field_tag :search, params[:search] %>
+      <%= submit_tag "Buscando", :value => "Buscar" %>
     <% end %>
-  </tbody>
-</table>
+  </ul>
 
+  <% @manutencaos.each do |manutencao| %>
+    <ul>
+      <li>
+        <%= link_to manutencao.realizadoQuando, manutencao_path(manutencao), class: "btn btn-default" %>
+        <%= link_to "Desagendar", manutencao, data: {:confirm => "Deseja remover o usuário?"}, :method => :delete, class: "btn btn-default" %>
+      </li>
+    </ul>
+  <% end %>
 <br>
 
-<%= link_to 'New Manutencao', new_manutencao_path %>
+<%= link_to 'Agendar Manutenção', new_manutencao_path, class:"btn btn-default" %>
