Tipo de dados em formato Data e Hora

--- a/app/views/manutencaos/_form.html.erb
+++ b/app/views/manutencaos/_form.html.erb
@@ -38,7 +38,7 @@
 
   <div class="field">
     <%= form.label :realizado_Quando %>
-    <%= form.text_field :realizadoQuando, id: :manutencao_realizadoQuando %>
+    <%= form.date_field :realizadoQuando, id: :manutencao_realizadoQuando %>
   </div>
 
   <div class="actions">
