--- a/app/views/motorista/_form.html.erb
+++ b/app/views/motorista/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :dias_de_Folga %>
-    <%= form.text_field :diasDeFolga, id: :motorista_diasDeFolga %>
+    <%= form.date_field :diasDeFolga, id: :motorista_diasDeFolga %>
   </div>
 
   <div class="field">
