--- a/app/views/motorista/show.html.erb
+++ b/app/views/motorista/show.html.erb
@@ -25,5 +25,6 @@
   <%= @motorista.telefone %>
 </p>
 
+<%= link_to 'Folga compensada', motorista_index_path, class:"btn btn-default", :onclick => @motorista.folgaCompensada %>
 <%= link_to 'Editar', edit_motorista_path(@motorista), class:"btn btn-default" %>
 <%= link_to 'Voltar', motorista_index_path, class:"btn btn-default" %>
