Confirmar que o motorista já realizou a folga que tinha direito

--- a/app/views/veiculos/_form.html.erb
+++ b/app/views/veiculos/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :Modelo %>
-    <%= form.text_field :modelo, id: :veiculo_modelo %>
+    <%= form.select :modelo, ["ambulância", "caminhonete", "hatch", "ônibus", "sedan", "trator"],id: :veiculo_modelo %>
   </div>
 
   <div class="field">
