--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,26 @@
-<h1>GETS - Sistema de Gerência Veícular</h1>
+<div class="jumbotron text-center">
+  <h1>GETS  <%= image_tag("bus.png", :alt => "bus",  height: 55, width: 90) %></h1>
+  <p>Sistema de Gerência de Transportes</p>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <center>
+        <h3>Sobre</h3>
+      <p>Sistema para gerenciamento veícular em desenvolvimento para o Setor de Transportes da Universidade Federal de Pernambuco - Unidade Acadêmica de Garanhuns</p>
+      </center>
+    </div>
+    <div class="col-sm-4">
+      <center><h3>Desenvolvedores</h3>
+      <p>O sistema está sendo desenvolvido pelos seguintes alunos da disciplina de Engenharia de Software: <a href="https://github.com/VitorAlan">Vitor Alan</a>, <a href="https://github.com/arnaldovitor">Arnaldo Vitor</a> e <a href="https://github.com/rafavmaciel">Rafael Galvão</a></p>
+      </center>
+    </div>
+    <div class="col-sm-4">
+      <center>
+      <h3>Cliente</h3>
+      <p>O projeto foi solicitado pelo sr. Amadeu Bezerra da Silva, chefe do <a href="https://goo.gl/maps/i3tb1LyxfXpN8HMQ8">Setor de Transportes da UAG</a> com objetivo de tornar mais fácil a gestão do setor</p>
+      </center>
+    </div>
+  </div>
+</div>
