--- a/app/views/veiculos/edit.html.erb
+++ b/app/views/veiculos/edit.html.erb
@@ -1,5 +1,11 @@
-<h1>Editando Veiculo</h1>
-
+<div class="jumbotron text-center">
+  <h1>Editar veículo</h1>
+  <p>Página para editar as informações de um véiculo já cadastrado</p>
+</div>
+<div class="container">
+  <div class="jumbotron">
 <%= render 'form', veiculo: @veiculo %>
 
 <%= link_to 'Voltar', veiculos_path, class:"btn btn-default" %>
+  </div>
+</div>
